--- a/app/assets/stylesheets/wyncode_assets/utils/forms.scss
+++ b/app/assets/stylesheets/wyncode_assets/utils/forms.scss
@@ -63,6 +63,10 @@ input[type=submit], button, .btn {
 			color: $wyncode-blue;
 			border: 1px solid $wyncode-blue;
 		}
+
+		&.light {
+			background-color: white;
+		}
 	}
 
 	&.btn-success {
