--- a/app/assets/stylesheets/wyncode_assets/utils/forms.scss
+++ b/app/assets/stylesheets/wyncode_assets/utils/forms.scss
@@ -55,6 +55,10 @@ input[type=submit], button, .btn {
 		border: 1px solid $wyncode-grey;
 		color: $wyncode-grey;
 
+		&.light {
+			background-color: white;
+		}
+
 		&:hover, &:focus {
 			color: $wyncode-black;
 			border: 1px solid $wyncode-black;
@@ -86,8 +90,4 @@ input[type=submit], button, .btn {
 		color: $wyncode-black;
 		border: 1px solid $wyncode-grey;
 	}
-}
-
-.btn.btn-secondary.light {
-	background-color: white;
 }
