Added highlight js

--- a/app/assets/stylesheets/wyncode_assets/wyncode_styles.scss
+++ b/app/assets/stylesheets/wyncode_assets/wyncode_styles.scss
@@ -53,6 +53,8 @@ $border-radius: 3px;
 @import 'application/cohort-submissions';
 @import 'application/instant-feedback';
 
+@import 'monokai-sublime';
+
 @import "wice_grid";
 
 
