Added Navigation elements and partials.   * Added partial for flash messages.

--- a/app/assets/stylesheets/wyncode_assets/application/navbar.scss
+++ b/app/assets/stylesheets/wyncode_assets/application/navbar.scss
@@ -26,10 +26,18 @@
     height: 25px;
     right: 80px;
   }
-  
+
   .navbar-avatar {
     position: absolute;
     bottom: -30px;
     right: 0;
   }
+
+  .navbar-dashboard {
+    height: 10px;
+    left: 50px;
+    position: relative;
+    top: 18px;
+  }
 }
+
