Changed font requests to https.

--- a/app/assets/stylesheets/wyncode_assets/wyncode_styles.scss
+++ b/app/assets/stylesheets/wyncode_assets/wyncode_styles.scss
@@ -10,13 +10,13 @@ $wyncode-yellow: #FFCC66;
   font-family: 'Rajdhani';
   font-style: normal;
   font-weight: 500;
-  src: local('Rajdhani Medium'), local('Rajdhani-Medium'), url(http://fonts.gstatic.com/s/rajdhani/v5/fMdPRPskyY3ckg8ymVQ5NrrIa-7acMAeDBVuclsi6Gc.woff) format('woff');
+  src: local('Rajdhani Medium'), local('Rajdhani-Medium'), url(https://fonts.gstatic.com/s/rajdhani/v5/fMdPRPskyY3ckg8ymVQ5NrrIa-7acMAeDBVuclsi6Gc.woff) format('woff');
 }
 @font-face {
   font-family: 'Rajdhani';
   font-style: normal;
   font-weight: 700;
-  src: local('Rajdhani Bold'), local('Rajdhani-Bold'), url(http://fonts.gstatic.com/s/rajdhani/v5/kcO_Mk7pjy8jlu86STaVz7rIa-7acMAeDBVuclsi6Gc.woff) format('woff');
+  src: local('Rajdhani Bold'), local('Rajdhani-Bold'), url(https://fonts.gstatic.com/s/rajdhani/v5/kcO_Mk7pjy8jlu86STaVz7rIa-7acMAeDBVuclsi6Gc.woff) format('woff');
 }
 
 $font-family: "Rajdhani", Helvetica, Arial, sans-serif;
