--- a/app/assets/stylesheets/wyncode_assets/wyncode_styles.scss
+++ b/app/assets/stylesheets/wyncode_assets/wyncode_styles.scss
@@ -52,6 +52,7 @@ $border-radius: 3px;
 @import 'application/admin-panel';
 @import 'application/cohort-submissions';
 @import 'application/instant-feedback';
+@import 'application/admin-cohort'; 
 
 @import 'monokai-sublime';
 
